fix: replace deprecated Class#newInstance calls, refresh dead README badges
- replace the deprecated Class#newInstance (deprecated since Java 9) in
  ArrayPropertyGetSet, ArrayGetSet, FieldGetAndSetter and MethodGetAndSet
  with getDeclaredConstructor().newInstance(); all call sites already
  catch Exception, so the additional checked exceptions are covered
- README: replace the dead travis-ci badge with the github-actions badge,
  the dead maven-badges.herokuapp.com badge with the shields.io
  maven-central badge and update the sonatype links to the Central Portal
- update CHANGELOG accordingly

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>